--- a/index.html
+++ b/index.html
@@ -1,17 +1,23 @@
 <html>
     <head>
         <link rel="stylesheet" href="https://unpkg.com/a11y-css-reset/reset.css" />
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" crossorigin="anonymous">
         <link rel="stylesheet" href="index.css">
         <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
     </head>
     <body>
-        <div id="app">
-            <input type="text" id="binaryNumber" name="binaryNumber" v-model="binaryNumber">
-            <button v-on:click="convertBinaryToDecimal">Convert Number</button>
-
-            {{ decimalNumber }}
-
-            {{ errorMessage }}
+        <div id="app" class="container-fluid d-flex justify-content-center align-items-center">
+            <div class="row d-flex justify-content-center align-content-center">
+                <div class="col-12 text-center">
+                    <input type="text" id="binaryNumber" name="binaryNumber" class="form-control" placeholder="Binary Number" aria-label="Binary Number" v-model="binaryNumber">
+                    <button class="btn btn-primary" v-on:click="convertBinaryToDecimal">Convert Number</button>
+                </div>
+                <div class="col text-center">
+                    <p>{{ decimalNumber }}</p>
+                    <p class="text-danger">{{ errorMessage }}</p>
+                </div>
+            </div>
+            
         </div>
         <script src="index.js"></script>
     </body>
